--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2005-09-11  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/gdk.symbols: 
+	* gdk/gdkproperty.h: 
+	* gdk/x11/gdkproperty-x11.c (gdk_atom_intern_static_string): 
+	New function to avoid pointless strdups when creating atoms
+	from static strings.  
+
+	* gdk/x11/gdkdisplay-x11.c:
+	* gdk/x11/gdkdnd-x11.c:
+	* gdk/x11/gdkevents-x11.c:
+	* gdk/x11/gdkmain-x11.c:
+	* gdk/x11/gdkproperty-x11.c:
+	* gdk/x11/gdkselection-x11.c:
+	* gdk/x11/gdkwindow-x11.c: Use gdk_atom_intern_static_string()
+	where appropriate.
+
 2005-09-09  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkcellrendererkeys.h: 
