--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,4 +1,11 @@
+2005-09-11  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/gdk-sections.txt: Add gdk_intern_static_string.
+
 2005-09-09  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk-docs.sgml: 
+	* gtk/gtk-sections.txt: Add a section for GtkCellRendererKeys
 
 	* gdk/tmpl/event_structs.sgml: Document GdkEventKey.is_modifier.
 
