--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-11  pclouds <pclouds@gmail.com>
+
+	* vi.po: Updated Vietnamese translation.
+
 2005-09-07  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
