updated by rajeshkajha@yahoo.com

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-13  Rajesh Ranjan <rajeshkajha@yahoo.com>
+
+	* hi.po: Updated Hindi translation.
+
 2005-09-11  pclouds <pclouds@gmail.com>
 
 	* vi.po: Updated Vietnamese translation.
