--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-13  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/tmpl/gtkeditable.sgml: Clarify docs
+	for ::insert-text signal.  (#316094, Tommi
+	Komulainen)
+
 2005-09-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/tmpl/gtkpaned.sgml: Fix some typos.
