--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-09-13  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkiconview.c (gtk_icon_view_class_init):
+	(gtk_icon_view_get_dest_item_at_pos):  Fix typos in the 
+	docs.  (#316008, #316027, #316121, Guillaume Cottenceau)
+
 	* gtk/gtkfilechooser.c (gtk_file_chooser_class_init): Add some docs.
 	(#316001, Guillaume Cottenceau)
 
