--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-14  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/updateiconcache.c (foreach_remove_func): Fix
+	a use-after-free bug.  (#316256, Alexander Nedotsukov)
+
 2005-09-13  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/*.c: Various cleanups.  (#315360, Kjartan Maraas)
