--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-14  Runa Bhattacharjee <runa@bengalinux.org>
+	* bn.po: Updated Bengali (bn) Translation by
+	Progga <progga@bengalinux.org>
+
 2005-09-09  Clytie Siddall <clytie@riverland.net.au>
 
         * vi.po: Updated Vietnamese translation.
