--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-14  Runa Bhattacharjee <runa@bengalinux.org>
+	* bn.po: Updated Bengali (bn) Translation by
+	Progga <progga@bengalinux.org>
+
 2005-09-13  Rajesh Ranjan <rajeshkajha@yahoo.com>
 
 	* hi.po: Updated Hindi translation.
