Updated Lithuanian translation.
2005-09-15  Žygimantas Beručka  <zygis@gnome.org>

        * lt.po: Updated Lithuanian translation.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-15  Žygimantas Beručka  <zygis@gnome.org>
+
+	* lt.po: Updated Lithuanian translation.
+
 2005-09-14  Runa Bhattacharjee <runa@bengalinux.org>
 	* bn.po: Updated Bengali (bn) Translation by
 	Progga <progga@bengalinux.org>
