--- a/ChangeLog
+++ b/ChangeLog
@@ -3,8 +3,9 @@
 	* gtk/gtkiconview.c: Use g_list_nth_data() instead of g_list_nth()->data
 	in multiple places to avoid segfaults if the index is out of range.  
 	(#316422, Guillaume Cottenceau)
+	(gtk_icon_view_set_drag_dest_item): 
 	(gtk_icon_view_scroll_to_path): Fix a typo in the docs.  (#316419,
-	Guillaume Cottenceau)
+	#316424, Guillaume Cottenceau)
 
 2005-09-18  Hans Breuer  <hans@breuer.org>
 
