--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-22  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkwidget.c (gtk_widget_class_init): Fix the documentation
+	for the grab-broken-event signal, noticed by Damon Chaplin.
+
 2005-09-21  Tor Lillqvist  <tml@novell.com>
 
 	* gdk/win32/gdkselection-win32.c (gdk_selection_convert,
