--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-22  Michael Natterer  <mitch@imendio.com>
+
+	* gtk/gtk-docs.sgml
+	* gtk/gtk-sections.txt
+	* gtk/gtk.types: GtkCellRendererKeys -> GtkCellRendererAccel
+
 Tue Sep 20 17:16:50 2005  Tim Janik  <timj@imendio.com>
 
 	* gtk/tmpl/gtkrc.sgml: added anchor. complexity doesn't get worse
