--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-24  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2005-09-14  Runa Bhattacharjee <runa@bengalinux.org>
 	* bn.po: Updated Bengali (bn) Translation by
 	Progga <progga@bengalinux.org>
