--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-24  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2005-09-07  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
@@ -678,7 +682,7 @@
 2005-01-30  David Lodge <dave@cirt.net>
                                                                                 
         * en_GB.po: Updated British translation.
-                                                                                
+
 2005-01-23  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
