--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-26  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/tmpl/gcs.sgml: Fix a comment.
+
 2005-09-22  Michael Natterer  <mitch@imendio.com>
 
 	* gtk/gtk-docs.sgml
